# roedermark-haushalt

./: .gitignore  LICENSE  Makefile  README.md  _check_2025.py  add_svg_ids.py  agents.md  analyze_structure.py  analyze_structure2.py  analyze_structure3.py  analyze_svg.py  analyze_svg2.py  categories.yaml  check_svg_entities.py  check_svg_regex.py  check_svg_strip.py  check_svg_strip2.py  clean_svg.py  konzept-schulden-seite.md  mappings.yaml  pyproject.toml  scan_structure.py  sources.yaml  tables.yaml  tasks.md  urls.md  vercel.json
.github/workflows/: pages.yml
data/raw/: documents.json
docs/: data-dictionary.md  limitations.md  methodology.md
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: data.ts  format.ts  icon-paths.ts  types.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/static/data/: cross_validation.json  documents.json  summary.json  (+7 more)
pipeline/: __init__.py
pipeline/fetch/: __init__.py  fetch.py  fetch_hebesaetze.py
pipeline/normalize/: __init__.py  normalize.py
pipeline/parse/: __init__.py  explore_multi.py  explore_pdf.py  explore_tables.py  extract_kreisvergleich.py  find_gesamt.py  find_main_tables.py  find_missing_tables.py  inspect_tables.py  parse.py  parse_ihk_steckbriefe.py  parse_investment_commentary.py  parse_jahresabschluss.py  parse_produkte.py
pipeline/publish/: __init__.py  classify_investments.py  extract_investment_entries.py  publish.py
pipeline/validate/: __init__.py  check_normalize.py  cross_validate.py  quick_check.py
(+35 files in other folders)
